tests/errors/lifetime/loan/mut_loan_blocks_direct_write.sim

        extern fn sink(r: &mut i64);
        fn f(x: i64) {
          r: &mut i64;
          entry:
            r = &mut x;
            x = 1;
            call sink(move r);
            return
        }
        